Fix tapping problem on mobile

--- a/style/global.scss
+++ b/style/global.scss
@@ -7,6 +7,7 @@
 }
 html,
 body {
+    cursor: pointer;
     touch-action: manipulation;
     height: 100%;
 }
